tdf#92725 FormattedField: when model value is NULL, force empty display string

as opposed to implicitly keeping whatever unrelated string was there before.

Change-Id: Ifaf1b41e951e97f209ecb617b32ec4f7522b1d08
Reviewed-on: https://gerrit.libreoffice.org/17299
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>